# nerva-numpy

./: README.md  data  index.html  nerva-numpy.html  pyproject.toml  setup.cfg
.github/workflows/: deploy-sphinx.yml  update-docs.yml
doc/: build_asciidoc_documentation.sh
doc/asciidoc/: nerva-numpy.adoc  settings.adoc
doc/sphinx/: conf.py  index.rst
examples/: custom_components.py  mlp_construction.py  train_mnist.py  train_synthetic.py  training1.py
scripts/: check_equations.py
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/.doctrees/_autosummary/: nerva_numpy.activation_functions.doctree  (+12 more)
sphinx/_autosummary/: nerva_numpy.activation_functions.html  nerva_numpy.datasets.html  nerva_numpy.html  nerva_numpy.layers.html  nerva_numpy.learning_rate.html  nerva_numpy.loss_functions.html  nerva_numpy.matrix_operations.html  nerva_numpy.multilayer_perceptron.html  nerva_numpy.optimizers.html  nerva_numpy.softmax_functions.html  nerva_numpy.training.html  nerva_numpy.utilities.html  nerva_numpy.weight_initializers.html
sphinx/_modules/: index.html
src/nerva_numpy/: __init__.py  activation_functions.py  datasets.py  layers.py  loss_functions.py  matrix_operations.py  multilayer_perceptron.py  optimizers.py  softmax_functions.py  training.py  utilities.py  weight_initializers.py
tests/: test_datasets_basics.py  test_learning_rate_schedulers.py  test_loss_functions.py  test_matrix_operations_basics.py  test_multilayer_perceptrons.py  test_one_layer.py  test_optimizers_basics.py  test_softmax_functions_basics.py  utilities.py
tools/: mlp.py
(+25 files in other folders)
